--- a/partials/comments.hbs
+++ b/partials/comments.hbs
@@ -3,7 +3,10 @@
 	<script type="text/javascript">
 	/* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
 	var disqus_shortname = 'devthememax'; // required: replace example with your forum shortname
-
+<nav class="main-menujeff"><ul>
+    <li><a href="/about/">Aboutjeff</a></li>
+    {{! nem.io}}
+</ul></nav>
 	/* * * DON'T EDIT BELOW THIS LINE * * */
 	(function() {
 	var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
